/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

option java_package = "org.apache.hadoop.hbase.protobuf.generated";
option java_outer_classname = "RSGroupAdminProtos";
option java_generic_services = true;
option java_generate_equals_and_hash = true;
option optimize_for = SPEED;

import "HBase.proto";
import "RSGroup.proto";

/** Group level protobufs */

message GetRSGroupInfoRequest {
  required string r_s_group_name = 1;
}

message GetRSGroupInfoResponse {
  optional RSGroupInfo r_s_group_info = 1;
}

message GetRSGroupInfoOfTableRequest {
  required TableName table_name = 1;
}

message GetRSGroupInfoOfTableResponse {
  optional RSGroupInfo r_s_group_info = 1;
}

message MoveTablesRequest {
  required string target_group = 1;
  repeated TableName table_name = 2;
}

message MoveTablesResponse {
}

message AddRSGroupRequest {
  required string r_s_group_name = 1;
}

message AddRSGroupResponse {
}

message RemoveRSGroupRequest {
  required string r_s_group_name = 1;
}

message RemoveRSGroupResponse {
}

message UpdateRSGroupConfigRequest {
  required string group_name = 1;
  repeated NameStringPair configuration = 2;
}

message UpdateRSGroupConfigResponse {
}

message DissolveRSGroupLocallyRequest {
  required string group_name = 1;
}

message DissolveRSGroupLocallyResponse {
}

message ListRSGroupInfosRequest {
}

message ListRSGroupInfosResponse {
  repeated RSGroupInfo  r_s_group_info = 1;
}